data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3797.wast
;; 6. **Test: Br_Table Exceeding Available Targets**    - **Description**: Utilize a `br_table` with indices exceeding the number of target labels, followed by a `call` instruction meant to modify stack values.    - **Constraint**: Confirm appropriate error handling and ensure no unintended stack value changes affecting the `call`.    - **Edge Case**: Detects how an excess of indices is managed, ensuring stack operations remain valid for calls after a `br_table`.

(assert_invalid
  (module
    (type $t0 (func))
    (func $foo 
      (block $label_0
        (br_table $label_0 (i32.const 1))
        (call $foo)
      )
    )
  )
  "unknown label"
)